Project simple_bank {
  database_type: 'PostgreSQL'
  Note: '''
    # Simple Bank Database
    **markdown content here**
    https://dbdiagram.io/
    https://docs.dbdocs.io/
    https://dbml.dbdiagram.io/cli
  '''
}


Table users as U {
  username varchar [pk]
  hashed_password varchar [not null]
  full_name varchar [not null]
  email varchar [unique, not null]
  password_changed_at timestampz [not null, default: '0001-01-01- 00:00:00+00Z'] // for changing password frequently
  created_at timestampz [not null, default: `now()`]
}

Table accounts as A { 
  id bigserial [pk] // auto-increment in postgres
  owner varchar [ref: > U.username, not null] // one user can have muktiple accounts with different currencies
  balance bigint [not null]
  currency varchar [not null]
  created_at timestampz [not null, default: `now()`]
  country_code int 

  Indexes {
    owner  
    (owner, currency) [unique]
  }
} 

// all changes to the account balance
Table entries { 
  id bigserial [pk] 
  account_id bigint [ref: > A.id] // inline relationship (many-to-one)
  amount bigint [not null, note: 'can be negative or positive']
  created_at timestampz [not null, default: `now()`]

  Indexes {
    account_id  
  }
} 

Table transfers { 
  id bigserial [pk] 
  from_account_id bigint [ref: > A.id] 
  to_account_id bigint [ref: > A.id] 
  amount bigint [not null, note: 'must be positive']
  created_at timestampz [not null, default: `now()`]

  Indexes {
    from_account_id  
    to_account_id
    (from_account_id, to_account_id)
  }
} 

